# Terminus-Bench-Tasks

./: README.md
build_optimization_performance/: .snorkel_config  instruction.md  task.toml
build_optimization_performance/environment/: Dockerfile
build_optimization_performance/environment/project/: CMakeLists.txt
build_optimization_performance/environment/project/src/: common.h  common_libs.h  complex_math_1.h  main.cpp  math_helper.cpp  string_processor.cpp
build_optimization_performance/solution/: solve.sh
build_optimization_performance/tests/: test_outputs.py
code_debug_error_resolution/: instruction.md  quick-test.ps1  readme  task.toml  test-solution.ps1
code_debug_error_resolution/environment/: Dockerfile  Makefile  load_test.sh  server.c
code_debug_error_resolution/solution/: solve.sh
code_debug_error_resolution/tests/: test.sh  test_outputs.py
debian_production_task/: .snorkel_config  instruction.md  task.toml
debian_production_task/environment/: Dockerfile  Makefile  hello.1  hello.c
debian_production_task/solution/: solve.sh
debian_production_task/tests/: requirements.txt  test.sh  test_outputs.py
gitlab_ci_yml/: .snorkel_config  instruction.md  task.toml
gitlab_ci_yml/environment/: Dockerfile
gitlab_ci_yml/solution/: solve.sh
gitlab_ci_yml/tests/: requirements.txt  test.sh  test_outputs.py
helm_chart_reference/: .snorkel_config  instruction.md  task.toml
helm_chart_reference/environment/: Dockerfile  docker-compose.yaml
helm_chart_reference/solution/: solve.sh  (+1 more)
remote_cloud/: .snorkel_config  instruction.md  task.toml
(+52 files in other folders)
